--- a/pom.xml
+++ b/pom.xml
@@ -12,15 +12,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
     <packaging>war</packaging>
-
     <!-- ============================================ -->
     <!-- =========  Informations générales  ========= -->
     <!-- ============================================ -->
@@ -29,12 +29,6 @@
     <description>Le site web de l'association "Les amis de l'escalade"
     pour la publication et le référencement de spots d'escalade, par la communauté</description>
     <url>http://www.amisdelescalade.org</url>
-
-                <!-- ========== Organisation ========== -->
-    <organization>
-        <name>Wayne corporation</name>
-        <url>http://www.elblogdebatman.com/</url>
-    </organization>
 
     <!-- ============================================ -->
     <!-- =========       Dependencies       ========= -->
